--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <title>Misza</title>
-    <input id="text">
-    <button onclick="run('text')">submit</button>
+<h2 style="text-align: center;">Misza Studios</h2>
+<p>This page will contain every project, made by Misza Studios:</p>
+<ul style="list-style-type: circle;">
+<li><a href="qwertywer1.github.io">4SwapS PythonCraft</a></li>
+<li><a href="qwertywer1.github.io/multitool">Misza MultiTool</a></li>
+</ul>
+<p>&nbsp;</p>
   </body>
   <script>
     function run(id){
